--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,6 @@
     <string name="ok" tools:ignore="Typos,ButtonCase">Ok</string>
     <string name="cancel">Cancel</string>
 
-    <string name="pref_sort_key">track_sort</string>
     <string name="name_ascending">Name ascending</string>
     <string name="name_descending">Name descending</string>
     <string name="order_added">Order added</string>
@@ -81,10 +80,14 @@
     <string name="dark_theme">Dark</string>
 
     <string name="playback">Playback</string>
+    <string name="ignore_audio_focus_setting_title">
+        Ignore audio focus</string>
+    <string name="ignore_audio_focus_setting_subtitle">
+        Allows playback alongside other apps</string>
     <string name="auto_pause_during_calls_setting_title">
         Auto-pause during calls</string>
     <string name="auto_pause_during_calls_setting_subtitle">
-        Requires read phone state permission</string>
+        Requires read phone state permission\nOnly needed when ignoring audio focus</string>
     <string name="request_phone_state_permission_explanation">
         SoundAura needs to access your device\'s phone state in order
         to be able to automatically pause playback during a phone call.
@@ -156,7 +159,10 @@
     <string name="set_playback_action" translatable="false">
         com.cliffracertech.soundaura.action.playPause</string>
 
+    <string name="pref_sort_key" translatable ="false">track_sort</string>
     <string name="pref_app_theme_key" translatable="false">app_theme</string>
+    <string name="pref_ignore_audio_focus_key" translatable="false">
+        ignore_audio_focus</string>
     <string name="pref_auto_pause_during_calls_key" translatable="false">
         auto_pause_during_calls</string>
 </resources>
