--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 <resources
     xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name" translatable="false">SoundAura</string>
-    <string name="app_version">v1.0.0</string>
+    <string name="app_version">v1.1.0</string>
 
     <string name="app_player_service_description">A service to play the user\'s sound mix.</string>
     <string name="player_notification_channel_name">Player controls</string>
@@ -129,8 +129,7 @@
         the tile will open SoundAura.</string>
     <string name="tile_tutorial_hide_notification_text">
         If you would like to hide SoundAura\'s notification to save
-        space, you must hide it yourself (Android won\'t allow
-        SoundAura to do this). Go to the %1$s, tap \'Notifications\'
+        space, you can hide it yourself in the %1$s. Tap \'Notifications\'
         and disable the \'Player controls\' notification.</string>
     <string name="tile_tutorial_hide_notification_link_text">
         system settings page for SoundAura</string>
