--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 <resources
     xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name" translatable="false">SoundAura</string>
-    <string name="app_version">v1.0.0</string>
+    <string name="app_version">v1.1.0</string>
 
     <string name="app_player_service_description">A service to play the user\'s sound mix.</string>
     <string name="player_notification_channel_name">Player controls</string>
@@ -89,16 +89,11 @@
     <string name="auto_pause_during_calls_setting_subtitle">
         Requires read phone state permission\nOnly needed when ignoring audio focus</string>
     <string name="request_phone_state_permission_explanation">
-        SoundAura needs to access your device\'s phone state in order
-        to be able to automatically pause playback during a phone call.
-        \n\nOther apps may not need this permission to pause playback
-        during a phone call because they use Android\'s audio focus
-        feature, through which the system will tell them when they need
-        to pause. SoundAura intentionally eschews normal audio focus
-        rules because it is intended as a background sound app that
-        should play alongside other audio.\n\nUnfortunately the only
-        other way for SoundAura to be able to detect ongoing phone
-        calls is with the permission to read the phone\'s state.</string>
+        When ignoring audio focus, SoundAura needs to access your device\'s
+        phone state in order to be able to automatically pause playback
+        during a phone call. This permission is not necessary when obeying
+        audio focus because SoundAura will lose audio focus when a call is
+        ongoing.</string>
 
     <string name="control_playback_using_tile_setting_title">
         Control playback using a tile</string>
@@ -134,8 +129,7 @@
         the tile will open SoundAura.</string>
     <string name="tile_tutorial_hide_notification_text">
         If you would like to hide SoundAura\'s notification to save
-        space, you must hide it yourself (Android won\'t allow
-        SoundAura to do this). Go to the %1$s, tap \'Notifications\'
+        space, you can hide it yourself in the %1$s. Tap \'Notifications\'
         and disable the \'Player controls\' notification.</string>
     <string name="tile_tutorial_hide_notification_link_text">
         system settings page for SoundAura</string>
