--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,20 +81,31 @@
     <string name="dark_theme">Dark</string>
 
     <string name="playback">Playback</string>
-    <string name="ignore_audio_focus_setting_title">
-        Ignore audio focus</string>
-    <string name="ignore_audio_focus_setting_subtitle">
-        Allows playback alongside other apps</string>
-    <string name="auto_pause_during_calls_setting_title">
-        Auto-pause during calls</string>
+
+    <string name="play_in_background_setting_title">Play in background</string>
+    <string name="play_in_background_setting_description">Tap for additional explanation</string>
+    <string name="play_in_background_explanation">Enabling play in background will:</string>
+    <string name="play_in_background_explanation_bullet_1">
+        Allow playback to occur alongside playback from other apps</string>
+    <string name="play_in_background_explanation_bullet_2">
+        Make playback controls appear in a regular notification instead
+        of in the media controls section of the status bar</string>
+    <string name="play_in_background_explanation_bullet_3">
+        Make playback ignore hardware media buttons (e.g. a headset\'s play/pause button)</string>
+    <string name="play_in_background_explanation_bullet_4">
+        Prevent playback from auto-pausing during calls, unless the \'Auto-pause during
+        calls\' setting is enabled and the read phone state permission is granted.
+    </string>
+
+    <string name="auto_pause_during_calls_setting_title">Auto-pause during calls</string>
     <string name="auto_pause_during_calls_setting_subtitle">
-        Requires read phone state permission\nOnly needed when ignoring audio focus</string>
+        Requires read phone state permission\nOnly needed when playing in background</string>
     <string name="request_phone_state_permission_explanation">
-        When ignoring audio focus, SoundAura needs to access your device\'s
-        phone state in order to be able to automatically pause playback
-        during a phone call. This permission is not necessary when obeying
-        audio focus because SoundAura will lose audio focus when a call is
-        ongoing.</string>
+        When not playing audio in the background, your device will let SoundAura know
+        that it should pause playback during a call. When audio is playing in the
+        background however, this will not occur. The read phone state permission is
+        needed in this case so that SoundAura can detect when a call is ongoing and
+        pause playback accordingly.</string>
 
     <string name="control_playback_using_tile_setting_title">
         Control playback using a tile</string>
@@ -154,8 +165,7 @@
 
     <string name="pref_sort_key" translatable ="false">track_sort</string>
     <string name="pref_app_theme_key" translatable="false">app_theme</string>
-    <string name="pref_ignore_audio_focus_key" translatable="false">
-        ignore_audio_focus</string>
+    <string name="pref_play_in_background_key" translatable="false">play_in_background</string>
     <string name="pref_auto_pause_during_calls_key" translatable="false">
         auto_pause_during_calls</string>
 </resources>
