--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,13 @@
         remove some tracks in order to add any more.
     </string>
 
+    <string name="preset_button_click_label">Change current preset</string>
+    <string name="unsaved_preset_description">Unsaved preset</string>
+    <string name="playing_modified_preset_description">Playing modified preset</string>
+    <string name="playing_preset_description">Playing preset</string>
+    <string name="preset_selector_title">Select a preset</string>
+    <string name="collapse_preset_selector_description">Close preset selection window</string>
+
     <string name="preset_click_label">Load preset %1$s</string>
     <string name="delete">Delete</string>
     <string name="confirm_delete_preset_title">Delete %1$s?</string>
