--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,12 @@
     <string name="playing_preset_description">Playing preset</string>
     <string name="preset_selector_title">Select a preset</string>
     <string name="close_preset_selector_description">Close preset selector</string>
+    <string name="save_preset_changes_button_text">Save changes</string>
+    <string name="confirm_overwrite_preset_dialog_title">Confirm overwrite preset</string>
+    <string name="confirm_overwrite_preset_dialog_message">This will overwrite the preset %1$s. Are you sure?</string>
+    <string name="create_new_preset_button_text">Create new</string>
+    <string name="create_new_preset_dialog_title">Enter new preset name</string>
+    <string name="create_new_preset_dialog_warning_message">Another preset with the same name already exists.</string>
 
     <string name="preset_click_label">Load preset %1$s</string>
     <string name="delete">Delete</string>
