--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="playing_preset_description">Playing preset</string>
     <string name="preset_selector_title">Select a preset</string>
     <string name="close_preset_selector_description">Close preset selector</string>
-    <string name="save_preset_changes_button_text">Save changes</string>
+    <string name="overwrite">Overwrite</string>
     <string name="confirm_overwrite_preset_dialog_title">Confirm overwrite preset</string>
     <string name="confirm_overwrite_preset_dialog_message">This will overwrite the preset %1$s. Are you sure?</string>
     <string name="create_new_preset_button_text">Create new</string>
