--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,12 +36,7 @@
         This will remove the track from your library,
         but will not delete the file from your device.</string>
 
-    <string name="add_button_description">Add track</string>
-    <string name="add_button_expanded_description">Cancel add track</string>
-    <string name="download">Download</string>
-    <string name="local_files">Local files</string>
-    <string name="download_button_message">
-        The download button is non-functional at this time</string>
+    <string name="add_track_button_description">Add track</string>
     <string name="add_local_files_dialog_title">Confirm track name(s)</string>
     <string name="track_already_exists_error_message">
         This file is already in the library.</string>
@@ -52,6 +47,25 @@
         Android\'s file permission limit of %2$d. You must
         remove some tracks in order to add any more.
     </string>
+
+    <string name="preset_button_click_label">Change current preset</string>
+    <string name="unsaved_preset_description">Unsaved preset</string>
+    <string name="playing_modified_preset_description">Playing modified preset</string>
+    <string name="playing_preset_description">Playing preset</string>
+    <string name="preset_selector_title">Select a preset</string>
+    <string name="close_preset_selector_description">Close preset selector</string>
+    <string name="overwrite">Overwrite</string>
+    <string name="confirm_overwrite_preset_dialog_title">Confirm overwrite preset</string>
+    <string name="confirm_overwrite_preset_dialog_message">This will overwrite the preset %1$s. Are you sure?</string>
+    <string name="add_preset_button_description">Create new preset</string>
+    <string name="create_new_preset_dialog_title">Enter new preset name</string>
+    <string name="create_new_preset_dialog_warning_message">Another preset with the same name already exists.</string>
+
+    <string name="preset_click_label">Load preset %1$s</string>
+    <string name="delete">Delete</string>
+    <string name="confirm_delete_preset_title">Delete %1$s?</string>
+    <string name="confirm_delete_preset_message">
+        This will not remove the tracks in the preset from your library.</string>
 
     <string name="play">Play</string>
     <string name="pause">Pause</string>
@@ -167,8 +181,7 @@
     <string name="tile_tutorial_add_tile_help_text">
         The button to edit your quick settings tiles might appear
         differently depending on your device manufacturer and
-        Android version. If you can\'t figure out how to add quick
-        settings tiles, try searching \'edit quick settings tiles\'
+        Android version. Try searching \'edit quick settings tiles\'
         along with your device manufacturer on an internet search
         engine.</string>
     <string name="tile_tutorial_add_tile_button_text">Add tile</string>
