--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,8 @@
     <string name="confirm_overwrite_preset_dialog_message">This will overwrite the preset %1$s. Are you sure?</string>
     <string name="add_preset_button_description">Create new preset</string>
     <string name="create_new_preset_dialog_title">Enter new preset name</string>
-    <string name="create_new_preset_dialog_warning_message">Another preset with the same name already exists.</string>
+    <string name="preset_name_cannot_be_blank_warning_message">The preset\'s name cannot be blank</string>
+    <string name="preset_name_already_in_use_warning_message">Another preset with the same name already exists.</string>
 
     <string name="preset_click_label">Load preset %1$s</string>
     <string name="delete">Delete</string>
