--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,10 @@
     <string name="confirm_delete_preset_message">
         This will not remove the tracks in the preset from your library.</string>
 
+    <string name="duplicate_preset_warning_title">Duplicate preset</string>
+    <string name="duplicate_preset_warning_message">
+        This new preset will have the same contents as the preset %1$s. Create anyways?</string>
+
     <string name="add_preset_button_description">Create new preset</string>
     <string name="create_new_preset_dialog_title">Enter new preset name</string>
     <string name="preset_name_cannot_be_blank_warning_message">
