--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="search">Search</string>
     <string name="sort_options_description">Open sorting options</string>
 
-    <string name="empty_track_list_message">Your library is empty. Click
+    <string name="empty_track_list_message">Your library is empty. Tap
         the add button below to add local files to your library.</string>
     <string name="add_track_to_mix_description">Add %1$s to sound mix</string>
     <string name="remove_track_from_mix_description">Remove %1$s from sound mix</string>
@@ -60,7 +60,7 @@
 
     <string name="overwrite">Overwrite</string>
     <string name="overwrite_no_active_tracks_error_message">
-        Presets must have at least one active track. Click a track\'s add button first</string>
+        Presets must have at least one active track. Tap a track\'s add button first</string>
     <string name="overwrite_no_unsaved_changes_message">The preset %1$s has no unsaved changes</string>
     <string name="confirm_overwrite_preset_dialog_title">Confirm overwrite preset</string>
     <string name="confirm_overwrite_preset_dialog_message">
@@ -71,9 +71,6 @@
     <string name="confirm_delete_preset_message">
         This will not remove the tracks in the preset from your library.</string>
 
-    <string name="duplicate_preset_warning_title">Duplicate preset</string>
-    <string name="duplicate_preset_warning_message">
-        This new preset will have the same contents as the preset %1$s. Create anyways?</string>
     <string name="preset_cannot_be_empty_warning_message">
         There are no active tracks to add to the preset.
         Tap a track\'s add button first.</string>
