--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
 
     <string name="overwrite">Overwrite</string>
     <string name="overwrite_no_active_tracks_error_message">
-        Presets must have at least one active track. Tap a track\'s add button first</string>
+        Presets must have at least one active track. Tap a track\'s add button first.</string>
     <string name="confirm_overwrite_preset_dialog_title">Confirm overwrite preset</string>
     <string name="confirm_overwrite_preset_dialog_message">
         This will overwrite the preset %1$s. Are you sure?</string>
