--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,10 @@
     <string name="ok" tools:ignore="Typos,ButtonCase">Ok</string>
     <string name="cancel">Cancel</string>
 
+    <string name="set_auto_stop_time_dialog_title">"Set auto stop time</string>
+    <string name="set_auto_stop_time_dialog_description">
+        Set the duration in hh:mm:ss after which playback will automatically be stopped.</string>
+
     <string name="show_active_tracks_first">Show active tracks first</string>
     <string name="name_ascending">Name ascending</string>
     <string name="name_descending">Name descending</string>
